fixed side menu from sticking out.

--- a/Resources/CSS-Folder/item-info-pg.css
+++ b/Resources/CSS-Folder/item-info-pg.css
@@ -200,7 +200,8 @@ header {
 }
 
 .item-image-display img {
-    height: 80%;
+    max-height: 50vh;
+    max-width: 50vw;
 }
 
 .item-information-container {
